REGRESSION (r159345): The hover state for links in the top navigation of Yahoo.com doesn't work https://bugs.webkit.org/show_bug.cgi?id=132241 rdar://problem/16501924

Reviewed by Andreas Kling.

Source/WebCore:
Test: fast/text/simple-lines-hover-underline.html

Checked that this does not hurt performance by running the
run-perf-tests PerformanceTests/Layout/line-layout.html command before and after.

* rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::hitTestInlineChildren): Use simpleLineLayout function rather than
getting at the data member directly.
(WebCore::RenderBlockFlow::firstLineBaseline): Ditto.
(WebCore::RenderBlockFlow::inlineBlockBaseline): Ditto.
(WebCore::RenderBlockFlow::lineCount): Ditto.
(WebCore::RenderBlockFlow::paintInlineChildren): Ditto.
(WebCore::RenderBlockFlow::hasLines): Ditto.
(WebCore::RenderBlockFlow::simpleLineLayout): Added logic to determine which path to use if
m_lineLayoutPath is undetermined, and call createLineBoxes if it's not simple.
(WebCore::RenderBlockFlow::ensureLineBoxes): Factored out most of the code into a new
createLineBoxes function.
(WebCore::RenderBlockFlow::createLineBoxes): Ditto.

* rendering/RenderBlockFlow.h: Made simpleLineLayout function no longer an inline.
Added a private createLineBoxes function.

LayoutTests:
* fast/text/simple-lines-hover-underline-expected.html: Added.
* fast/text/simple-lines-hover-underline.html: Added.

* fast/text/simple-lines-hover.html: Removed an unneeded style element with a style rule that
does nothing.

Canonical link: https://commits.webkit.org/150279@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167870 268f45cc-cd09-0410-ab3c-d52691b4dbfc